compilador/test_programs/invalid/09_void_in_expression.patito
programa void_in_expr;
vars:
    x: entero;

nula printValue(val: entero) {
    escribe(val);
};

inicio {
    x = printValue(5);
}
fin
